[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-client"
version = "0.7.3"

[dependencies]
config = "0.13.1"
log = "0.4.16"
log4rs = {git="https://github.com/estk/log4rs.git", branch="master"}

tokio = { version = "1.17.0", features = ["full"] }
futures-util = "0.3.21"
futures-intrusive = {git="https://github.com/Matthias247/futures-intrusive.git", branch="master"}
futures = "0.3.21"

actix = "0.13.0"
actix-codec = "0.5.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
awc = "3.0.0"

ahash = "0.7.6"
dashmap = "5.2.0"
dycovec = "0.1.1"
num_cpus = "1.13.1"
bytes = "1.1.0"
prost = "0.10.1"
serde = "1.0.136"
serde_derive = "1.0.136"
maxwell-protocol = {git="https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag="v0.8.1"}
maxwell-utils = {git="https://github.com/maxwell-dev/maxwell-utils-rust.git", tag="v0.6.0"}
