[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-client"
version = "0.7.5"

[dependencies]
config = "0.13.2"
log = "0.4.17"
log4rs = "1.2.0"

futures = "0.3.25"
futures-intrusive = "0.5.0"
futures-util = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }

actix = "0.13.0"
actix-codec = "0.5.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
awc = "3.0.1"

ahash = "0.8.2"
bytes = "1.2.1"
dashmap = "5.4.0"
dycovec = "0.1.1"
maxwell-protocol = { git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.9.1" }
maxwell-utils = { git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.6.0" }
num_cpus = "1.14.0"
prost = "0.11.2"
serde = "1.0.147"
serde_derive = "1.0.147"
